# cf-ddns

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  cf-ddns-ipv6.service  config.example.json  docker-compose.yml  justfile
.github/workflows/: docker_build_and_publish_release.yml
src/: ddns.rs  ipv6.rs  main.rs
