[package]
name = "cf-ddns"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
cloudflare = "0.14.0"
dotenvy = "0.15.7"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
